assets/scss/organisms/homepage/_our-expertise.scss
.our-expertise{
    overflow: hidden;
    position: relative;
    margin-top: -400px;
    z-index: $z-index-2;
    transition: opacity 0.5s linear;

    @include breakpoint(small only){
        margin-top: 0;
    }

    &.background-color{
        @include breakpoint(medium up){
            background: $dark-blue-6;
            transition: background-color 0.5s ease;
        }
    }

    .pin-spacer{
        z-index: $z-index-2;
    }

    .gradient-container{
        height: 300px;
        z-index: $z-index-0;
        transition: opacity 0.2s ease;
        background: linear-gradient(rgba($white, 0), rgba($white, 1));

        @include breakpoint(1441px){
            height: 500px;
        }

        @include breakpoint(medium down){
            height: 200px;
        }

        &.opacity{
            opacity: 0;
        }
    }

    .our-expertise-row{
        position: relative;
        pointer-events: none; // Fixes overlapping rows

        .pin-spacer {
            width: 25% !important; // Solves bug with scrolltrigger pin calculations
        }

        &:first-child{
            padding-top: 400px;

            @include breakpoint(large down){
                padding-top: 400px;
            }

            @include breakpoint(medium down){
                padding-top: 300px;
            }

            @include breakpoint(small only){
                padding-top: 0;
            }
        }

        @include breakpoint(small only){
            .expertise-section-image{
                order: 1
            }

            .expertise-section-text{
                order: 2
            }
        }

        &:not(:first-child){
            margin-top: -120px;

            @include breakpoint(medium down){
                margin-top: 0;
            }
        }

        .expertise-image{
            pointer-events: auto; // Override "none" from row

            @include breakpoint(360px down) {
                max-width: 150px;
            }

            @include breakpoint(medium up){
                position: relative;
                overflow-x: hidden;

                .image-card{
                    transform: translateX(0);
                    transition: $transition-expertise-image;
                }

                &:hover{
                    .image-card{
                        transform: translateX(100%);
                    }
                }

                .background-video{
                    top: 0;
                    left: 0;
                    width: 100%;
                    height: 100%;
                    overflow: hidden;
                    position: absolute;

                    video{
                        width: 100%;
                        height: 104%;
                    }
                }
            }
        }
    }

    @include breakpoint(medium up){
        &.lines-background::before {
            opacity: 1;
        }

        &::before {
            left: 50%;
            opacity: 0;
            content: '';
            z-index: -1;
            height: 100%;
            position: absolute;
            width: calc(100% - 4.8rem);
            transform: translateX(-50%);
            transition: opacity 0.2s ease-out;
            max-width: calc(192rem - 4.8rem);
            border-right: 2px solid $dark-blue-4;
            background-image: linear-gradient(90deg, $dark-blue-4 1px, rgba($dark-blue-4, 0) 1px);
            background-size: 25%;
        }
    }

    .glide-expertise{
        padding: 125px 0 80px 15px;

        @include breakpoint(small only){
            padding-top: 0;
        }

        .glide__track{
            margin-top: 25px;
        }

        .section-title{
            margin-bottom: 35px;
        }

        .glide__bullets{
            padding-right: 15px;
        }
    }
}

